networkpolicy-db-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-networkpolicy-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mysql-db
  policyTypes:
  - Ingress
  ingress:
    - from:
       - podSelector:
           matchLabels:
              app: flask
